[gd_scene load_steps=2 format=2]

[ext_resource path="res://tools/location/portals/portalItem.gd" type="Script" id=1]

[node name="portalItem" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1139.0
margin_bottom = -644.0
rect_min_size = Vector2( 318, 80 )
size_flags_horizontal = 3
alignment = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 318.0
margin_bottom = 20.0
alignment = 1

[node name="HSeparator" type="HSeparator" parent="HBoxContainer"]
margin_right = 117.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="lblId" type="Label" parent="HBoxContainer"]
margin_left = 121.0
margin_right = 196.0
margin_bottom = 20.0
rect_min_size = Vector2( 75, 20 )
align = 1
valign = 1

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer"]
margin_left = 200.0
margin_right = 318.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="."]
margin_top = 24.0
margin_right = 318.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 20 )
text = "Pass logic"
valign = 1

[node name="txtPassLogic" type="TextEdit" parent="."]
margin_top = 48.0
margin_right = 318.0
margin_bottom = 304.0
rect_min_size = Vector2( 0, 256 )
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
highlight_all_occurrences = true

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 308.0
margin_right = 318.0
margin_bottom = 318.0
rect_min_size = Vector2( 0, 10 )

[node name="Label2" type="Label" parent="."]
margin_top = 322.0
margin_right = 318.0
margin_bottom = 342.0
rect_min_size = Vector2( 0, 20 )
text = "Transfer settings"
valign = 1

[node name="GridContainer" type="GridContainer" parent="."]
margin_top = 346.0
margin_right = 318.0
margin_bottom = 398.0
size_flags_horizontal = 3
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GridContainer"]
margin_top = 2.0
margin_right = 88.0
margin_bottom = 22.0
rect_min_size = Vector2( 88, 20 )
text = "New location"
valign = 1

[node name="txtNewLocation" type="LineEdit" parent="GridContainer"]
margin_left = 92.0
margin_right = 318.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="GridContainer"]
margin_top = 30.0
margin_right = 88.0
margin_bottom = 50.0
rect_min_size = Vector2( 88, 20 )
text = "Spawn ID"
valign = 1

[node name="txtToSpawn" type="LineEdit" parent="GridContainer"]
margin_left = 92.0
margin_top = 28.0
margin_right = 318.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="Control" type="Control" parent="."]
margin_top = 402.0
margin_right = 318.0
margin_bottom = 422.0
rect_min_size = Vector2( 0, 20 )

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_top = 426.0
margin_right = 318.0
margin_bottom = 446.0

[node name="Control" type="Control" parent="HBoxContainer2"]
margin_right = 214.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="btnRemove" type="Button" parent="HBoxContainer2"]
margin_left = 218.0
margin_right = 318.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 20 )
text = "Remove"

[node name="Control2" type="Control" parent="."]
margin_top = 450.0
margin_right = 318.0
margin_bottom = 460.0
rect_min_size = Vector2( 0, 10 )
